[Elastic] Fix CSS flickering for the login form

--- a/elastic/styles/_styles.less
+++ b/elastic/styles/_styles.less
@@ -50,6 +50,7 @@ body.task-login {
 
     #layout-content {
         background-color: transparent;
+        transition: opacity .5s linear;
     }
 
     #logo {
@@ -62,6 +63,14 @@ body.task-login {
     #login-form {
         top: 0;
     }
+}
+
+.transparent {
+    opacity: 0;
+}
+
+.opaque {
+    opacity: 1;
 }
 
 .fa, .fas {
